--- a/index.html
+++ b/index.html
@@ -14,9 +14,8 @@
     </header>
     <section>
       <div ng-controller="ieCtrl" class="container">
-        <h2>対応表</h2>
         <div class="length">
-          <p>絞り込み
+          <p>キーワードで絞り込み
             <input type="text" ng-model="query">
           </p>
         </div>
@@ -28,19 +27,22 @@
             <td>IE8</td>
             <td>IE9</td>
             <td>IE10</td>
+            <td>IE11</td>
           </tr>
           <tr ng-repeat="prop in props|orderBy:type|filter:query">
-            <th>{{prop.type}}<br>{{prop.name}}</th>
-            <td ng-if="prop.ie6">○</td>
-            <td ng-if="!prop.ie6">×</td>
-            <td ng-if="prop.ie7">○</td>
-            <td ng-if="!prop.ie7">×</td>
-            <td ng-if="prop.ie8">○</td>
-            <td ng-if="!prop.ie8">×</td>
-            <td ng-if="prop.ie9">○</td>
-            <td ng-if="!prop.ie9">×</td>
-            <td ng-if="prop.ie10">○</td>
-            <td ng-if="!prop.ie10">×</td>
+            <th><span class="type type-{{prop.type}}">{{prop.type}}</span><br><span class="name">{{prop.name}}</span></th>
+            <td ng-if="prop.ie6" class="true">○</td>
+            <td ng-if="!prop.ie6" class="false">×</td>
+            <td ng-if="prop.ie7" class="true">○</td>
+            <td ng-if="!prop.ie7" class="false">×</td>
+            <td ng-if="prop.ie8" class="true">○</td>
+            <td ng-if="!prop.ie8" class="false">×</td>
+            <td ng-if="prop.ie9" class="true">○</td>
+            <td ng-if="!prop.ie9" class="false">×</td>
+            <td ng-if="prop.ie10" class="true">○</td>
+            <td ng-if="!prop.ie10" class="false">×</td>
+            <td ng-if="prop.ie11" class="true">○</td>
+            <td ng-if="!prop.ie11" class="false">×</td>
           </tr>
         </table>
       </div>
