--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <input id="search" type="text" ng-model="query" name="keywords" placeholder="ex. border-radius" autofocus>
           </p>
         </div>
-        <table ng-cloak class="table ng-cloak">
+        <table class="table">
           <tr>
             <th>プロパティとか</th>
             <td>IE6</td>
@@ -30,16 +30,16 @@
             <td>IE11</td>
           </tr>
           <tr ng-repeat="prop in props|orderBy:type|filter:query">
-            <th>
+            <th ng-cloak>
               <p class="icon"><span class="type type-{{prop.type}}">{{prop.type}}</span></p>
               <p class="desc"><span class="name">{{prop.name}}</span></p>
             </th>
-            <td class="{{prop.ie6}}"><span ng-if="prop.ie6">○</span><span ng-if="!prop.ie6">×</span></td>
-            <td class="{{prop.ie7}}"><span ng-if="prop.ie7">○</span><span ng-if="!prop.ie7">×</span></td>
-            <td class="{{prop.ie8}}"><span ng-if="prop.ie8">○</span><span ng-if="!prop.ie8">×</span></td>
-            <td class="{{prop.ie9}}"><span ng-if="prop.ie9">○</span><span ng-if="!prop.ie9">×</span></td>
-            <td class="{{prop.ie10}}"><span ng-if="prop.ie10">○</span><span ng-if="!prop.ie10">×</span></td>
-            <td class="{{prop.ie11}}"><span ng-if="prop.ie11">○</span><span ng-if="!prop.ie11">×</span></td>
+            <td ng-cloak class="{{prop.ie6}}"><span ng-if="prop.ie6">○</span><span ng-if="!prop.ie6">×</span></td>
+            <td ng-cloak class="{{prop.ie7}}"><span ng-if="prop.ie7">○</span><span ng-if="!prop.ie7">×</span></td>
+            <td ng-cloak class="{{prop.ie8}}"><span ng-if="prop.ie8">○</span><span ng-if="!prop.ie8">×</span></td>
+            <td ng-cloak class="{{prop.ie9}}"><span ng-if="prop.ie9">○</span><span ng-if="!prop.ie9">×</span></td>
+            <td ng-cloak class="{{prop.ie10}}"><span ng-if="prop.ie10">○</span><span ng-if="!prop.ie10">×</span></td>
+            <td ng-cloak class="{{prop.ie11}}"><span ng-if="prop.ie11">○</span><span ng-if="!prop.ie11">×</span></td>
           </tr>
         </table>
       </div>
