update resources path

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="/libs/font-awesome/css/font-awesome.min.css">
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="./libs/font-awesome/css/font-awesome.min.css">
+    <link rel="stylesheet" href="./style.css">
     <title>IEEEeee!!!</title>
   </head>
   <body>
@@ -47,11 +47,11 @@
     <footer class="pageFooter">
       <p class="copyright">Created by <a href="http://anticyb.org/" target="_blank">muyuu</a></p>
     </footer>
-    <script src="/libs/labjs/LAB.min.js"></script>
+    <script src="./libs/labjs/LAB.min.js"></script>
     <script>
       $LAB
-      .script("/libs/angular/angular.js").wait()
-      .script("/app.js");
+      .script("./libs/angular/angular.js").wait()
+      .script("./app.js");
       
     </script>
   </body>
